--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-select": "^5.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
