--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18",
     "react-select": "^5.9.0"
   },
