--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-apexcharts": "^1.4.1",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "react-select": "^5.9.0"
   },
   "devDependencies": {
